--- a/src/c/Makefile
+++ b/src/c/Makefile
@@ -31,6 +31,9 @@ AGENT_OBJECTS = $(addprefix $(OUTPUT_DIRECTORY), $(addsuffix .o, $(basename $(AG
 
 AGENT_FILE = ubench-agent.so
 
+JAVA_METRIC_DUMPER_CP = ../../out/classes
+JAVA_METRIC_DUMPER_CLASS = cz.cuni.mff.d3s.perf.BenchmarkMetricDumper
+
 all: $(OUTPUT_DIRECTORY)$(AGENT_FILE)
 
 $(OUTPUT_DIRECTORY)$(AGENT_FILE): $(AGENT_OBJECTS)
@@ -38,6 +41,11 @@ $(OUTPUT_DIRECTORY)$(AGENT_FILE): $(AGENT_OBJECTS)
 
 $(OUTPUT_DIRECTORY)%.o: %.c
 	$(CC) $(CFLAGS) -c -o $@ $(CFLAGS_JNI) $<
+
+$(OUTPUT_DIRECTORY)benchmark.o: $(OUTPUT_DIRECTORY)metric.h
+
+$(OUTPUT_DIRECTORY)metric.h:
+	java -cp $(JAVA_METRIC_DUMPER_CP) $(JAVA_METRIC_DUMPER_CLASS) >$@
 
 $(AGENT_SOURCES): $(OUTPUT_DIRECTORY)$(JNI_C_HEADER_BASE)_CompilationCounter.h
 $(AGENT_SOURCES): $(OUTPUT_DIRECTORY)$(JNI_C_HEADER_BASE)_Benchmark.h
@@ -47,5 +55,5 @@ $(OUTPUT_DIRECTORY)$(JNI_C_HEADER_BASE)_%.h: $(JNI_CLASS_DIR)/%.java
 	$(JAVAH) -cp ../java -d $(OUTPUT_DIRECTORY) $(JNI_CLASSNAME_BASE).$*
 
 clean:
-	rm -rf $(OUTPUT_DIRECTORY)*.so $(OUTPUT_DIRECTORY)*.o $(OUTPUT_DIRECTORY)$(JNI_C_HEADER_BASE)*.h
+	rm -rf $(OUTPUT_DIRECTORY)*.so $(OUTPUT_DIRECTORY)*.o $(OUTPUT_DIRECTORY)$(JNI_C_HEADER_BASE)*.h $(OUTPUT_DIRECTORY)metric.h
 
