Get rid of C99-style loops

--- a/build.xml
+++ b/build.xml
@@ -58,8 +58,9 @@
 	<!--
 		Prepare compiler and linker settings.
 	-->
-	<compiler id="agent.c.compiler" warnings="diagnostic">
-		<compilerarg value="-std=c99" />
+	<compiler
+			id="agent.c.compiler"
+			warnings="severe">
 		<defineset>
 			<define name="HAS_PAPI" if="agent.feature.has.papi" />
 		</defineset>
